--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,9 +5,8 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ develop ]
-  pull_request:
-    branches: [ develop ]
+    tags:
+      - 'v1.*'
 
 jobs:
   build:
@@ -16,14 +15,62 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Get latest release version tag number
+      id: get_version
+      uses: battila7/get-version-action@v2
+
+        - name: Create Release
+          id: create_release
+          uses: actions/create-release@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
+          with:
+            tag_name: ${{ steps.get_version.outputs.version }}
+            release_name: ${{ steps.get_version.outputs.version }} - J-Japanese-MusicBot
+            body: |
+              ## WIKI (English)
+              https://github.com/jagrosh/MusicBot/wiki/Setup
+              https://github.com/jagrosh/MusicBot/wiki/Example-Config
+
+              ### JMusicBot-${{ steps.get_version.outputs.version }}-All.jar (JAVAが動く全OS対応)
+
+              #### ※JMusicBot-${{ steps.get_version.outputs.version }}.jar(ダウンロードしないでください！これは一時ファイルです！)
+
+
+              バージョンをよく確認しておいてください！
+              ![687474703a2f2f692e696d6775722e636f6d2f313478397544792e706e67](https://user-images.githubusercontent.com/29114790/93017367-0e17d880-f603-11ea-9b35-97ea82265c39.png)
+              これらのファイルをファイル権限などが厳しいところに置かないでください。うまく動作しなくなる可能性があります。
+
+              #### Source code.zip/.tar.gzはダウンロードしないでください。必要ありませんので...
+
+              Build by ${{ github.actor }}
+              draft: false
+              prerelease: false
+
+
+
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+
     - run: mkdir staging && cp target/*.jar staging
+
     - uses: actions/upload-artifact@v2
       with:
         name: Package
         path: staging
+
+    - uses: xresloader/upload-to-github-release@v1
+      name: Upload Release File
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
+      with:
+        file: "target/*.jar"
+        tags: true
+        draft: false
+        tag_name: ${{ steps.get_version.outputs.version }}
